Skip lock screen apps initialization for non gaia users

Lock screen apps are available only for gaia users, so there is no
need for lock screen apps initialization for other users (and no need
to create lock screen apps profile).

BUG=763572

Change-Id: I01ad311e9c5bac4be87921d4871758fdd4718abb